======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 50.13-r1.1

## Documentation
- Update docs on release procedures and symbol generation

# 50.13-r1

## Fixes
- Fixed misidentification of visitors from your own civ as residents; affects all tools that iterate through citizens/residents
- `cursecheck`: act on selected unit only if a unit is selected
- Fixed incorrect DFHack background window texture when DF is started in ascii mode and subsequently switched to graphics mode

## Misc Improvements
- `suspendmanager`: Account for walls planned on the z-layer below when determining accessibility to a job

## Documentation
- `autoclothing`: add section comparing ``autoclothing`` and `tailor` to guide players choosing which to enable

# 50.12-r3

## New Tools
- `aquifer`: commandline tool for creating, draining, and modifying aquifers

## New Features
- `buildingplan`: add overlays for unlinking and freeing mechanisms from buildings
- `dig`: designate tiles for damp or warm dig, which allows you to dig through damp or warm tiles without designations being canceled
- `dig`: damp and warm tile icons now remain visible when included in the designation selection box (graphics mode)
- `dig`: aquifer tiles are now visually distinct from "just damp" tiles (graphics and ascii modes)
- `dig`: light aquifer tiles are now visually distinct from heavy aquifer tiles (graphics and ascii modes)
- `dig`: autodig designations that are marked for damp/warm dig propagate the damp/warm tag when expanding to newly exposed tiles